# HoloAssist-AI

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  HANDOFF.md  ISAAC_SIM_PLAN.md  LAUNCH.md  PERCEPTION.md  PROGRESS.md  PROJECT_OVERVIEW.md  README.md  README_RL.md  index.html  setup.sh  shared.css  shared.js
clustering/: README.md  analyse_scene.py  detect_cubes.py  plot_results.py  requirements.txt  verify_detection.py  view_ply.py
docs/: clustering-pipeline-development-log.md  clustering-pipeline.md  clustering.html  content-images-and-links.md  content-perception.md  content-simulation.md  content-team.md  content-training.md  gazebo-sim-development-log.md  gazebo.html  index.html  isaac-sim-development-log.md  perception.html  simulation.html  training.html
docs/superpowers/plans/: 2026-05-30-pick-place-pipeline.md
docs/superpowers/specs/: 2026-05-30-pick-place-pipeline-design.md
isaac_rl/: .gitignore  ISAAC_SIM_PLAN.md  ISAAC_SIM_Progress.md  LAUNCH.md  TRAINING_RUNS.md
isaac_rl/assets/urdf/: ur_onrobot.urdf  ur_onrobot_prepared.urdf
isaac_rl/holoassist_tasks/: README.md
isaac_rl/holoassist_tasks/scripts/: list_envs.py  random_agent.py  zero_agent.py
isaac_rl/scenes/: ur_onrobot_test_stage.usda
isaac_rl/scripts/: grasp_test_v0.py  inspect_urdf.py  prepare_urdf.py  reach_test_v0.py  robot_test_v0.py
ros2_ws/src/holoassist_sim/: CMakeLists.txt  package.xml
ros2_ws/src/holoassist_sim/config/: ros_gz_bridge.yaml.jinja2  rviz.rviz  sim_params.yaml
ros2_ws/src/holoassist_sim/launch/: sim.launch.py
ros2_ws/src/holoassist_sim/scripts/: dataset_capture.py  randomize_scene.py  render_world.py  save_pointcloud.py  scene_controller.py
ros2_ws/src/holoassist_sim/worlds/: table_cubes.sdf.jinja2
ros2_ws/src/moveit_robot_control/: INTEGRATION_AND_MERGE.md  README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/moveit_robot_control_msgs/: CMakeLists.txt  package.xml
screenshots/: gazeboclassicfailure
ur3e_rl_ws/: MUJOCO_LOG.TXT  PROGRESS.md  TRAINING_CUBE_COLLECTION.md  TRAINING_NOTES.md  notes.md
ur3e_rl_ws/install/: local_setup.sh  setup.sh
ur3e_rl_ws/install/ur3e_policy_controller/share/ur3e_policy_controller/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ur3e_rl_ws/install/ur3e_rl_env/share/ur3e_rl_env/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ur3e_rl_ws/log/: latest_build
ur3e_rl_ws/mujoco_tb_logs/: monitor.monitor.csv
ur3e_rl_ws/mujoco_tb_logs/PPO_1/: events.out.tfevents.1780387494.Legion.15454.0  events.out.tfevents.1780398862.Legion.4374.0
ur3e_rl_ws/reach_tb_logs/PPO_0/: events.out.tfevents.1780405945.xps.2385660.0
ur3e_rl_ws/reach_tb_logs/PPO_1/: events.out.tfevents.1780406665.xps.2755514.0  events.out.tfevents.1780408793.xps.3587416.0
ur3e_rl_ws/reach_tb_logs/PPO_2/: events.out.tfevents.1780409088.xps.3671082.0  events.out.tfevents.1780411205.xps.118544.0
ur3e_rl_ws/reach_tb_logs/PPO_3/: events.out.tfevents.1780411300.xps.144476.0
ur3e_rl_ws/reach_tb_logs/PPO_4/: events.out.tfevents.1780413422.xps.987520.0
ur3e_rl_ws/scripts/: ik_reference.py  launch_moveit_workers.sh  monitor_training.sh  training_monitor.rviz  visualize_ik.py
ur3e_rl_ws/src/: README.md
ur3e_rl_ws/src/cube_perception/: package.xml  setup.cfg  setup.py
ur3e_rl_ws/src/cube_perception/config/: params.yaml
ur3e_rl_ws/src/cube_perception/cube_perception/: benchmark.py  detector.py  perception_node.py  tracker.py  visualiser.py
ur3e_rl_ws/src/cube_perception/launch/: cube_perception.launch.py
ur3e_rl_ws/src/ur3e_gazebo_sim/: CMakeLists.txt  README.md  package.xml
ur3e_rl_ws/src/ur3e_gazebo_sim/launch/: ur3e_pick_place_world.launch.py
ur3e_rl_ws/src/ur3e_gazebo_sim/meshes/rg2/collision/: base_link.stl  inner_finger.stl  inner_knuckle.stl  outer_knuckle.stl
ur3e_rl_ws/src/ur3e_gazebo_sim/meshes/rg2/visual/: base_link.stl  inner_finger.stl  inner_knuckle.stl  outer_knuckle.stl
ur3e_rl_ws/src/ur3e_gazebo_sim/models/cube/: model.config
ur3e_rl_ws/src/ur3e_gazebo_sim/models/place_bin/: model.sdf
ur3e_rl_ws/src/ur3e_gazebo_sim/models/table/: model.config
ur3e_rl_ws/src/ur3e_gazebo_sim/scripts/: gazebo_pose_bridge.py  pointcloud_cube_detector  send_home_trajectory.py  setup_controllers.py
ur3e_rl_ws/src/ur3e_gazebo_sim/scripts/archive/: README.md  pointcloud_cube_detector_v1.py
ur3e_rl_ws/src/ur3e_gazebo_sim/urdf/: rg2_fixed.xacro  ur3e_rg2_benchtop.urdf.xacro
ur3e_rl_ws/src/ur3e_gazebo_sim/worlds/: pick_place_world.sdf
ur3e_rl_ws/src/ur3e_policy_controller/: setup.cfg  setup.py
ur3e_rl_ws/src/ur3e_rl_env/: convert_urdf_to_mjcf.py  fix_mesh_paths.py  setup.cfg  setup.py  test_scene_load.py  test_urdf_load.py  watch_mujoco.py  watch_pan_locked_reach.py  watch_pipeline.py  (+3 more)
(+155 files in other folders)
