<?xml version="1.0"?>
<package format="3">
  <name>holoassist_sim</name>
  <version>0.1.0</version>
  <description>
    Gazebo (Ignition Fortress) + RViz simulation of a table with 4 small cubes
    observed by an Intel RealSense D435i, used to capture point cloud datasets
    for clustering algorithm development and validation in Polyscope.
  </description>
  <maintainer email="sebastianbaudille@gmail.com">Sebastian</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ros_gz_image</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>sensor_msgs_py</exec_depend>
  <exec_depend>python3-jinja2</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
