<?xml version="1.0"?>
<package format="3">
  <name>ur3e_policy_controller</name>
  <version>0.1.0</version>
  <description>Runtime ROS 2 node for executing trained UR3e reinforcement learning policies.</description>
  <maintainer email="ollie@example.com">Ollie</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>ur3e_rl_env</exec_depend>
  <exec_depend>ur3e_safety_layer</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

